--- a/labs.html
+++ b/labs.html
@@ -24,7 +24,7 @@
     <section>
         <h2>Список лабораторних</h2>
         <ul>
-            <li>Лабораторна №1 – <em>буде додано пізніше</em></li>
+            <li>Лабораторна №1 – <em>буде додано пізнішееее</em></li>
             <li>Лабораторна №2 – <em>буде додано пізніше</em></li>
         </ul>
     </section>
