--- a/lab3/index.html
+++ b/lab3/index.html
@@ -7,3 +7,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+      <header class="header">
+    <div class="logo">🎬 YouTube</div>
+    <div class="search-bar">
+      <input type="text" placeholder="Пошук">
+      <button>🔍</button>
+    </div>
+    <div class="user-menu">🔔 👤</div>
+  </header>
