додано бокове меню

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -15,3 +15,12 @@
     </div>
     <div class="user-menu">🔔 👤</div>
   </header>
+    <main class="main"></main>
+     <nav class="sidebar">
+      <ul>
+        <li>🏠 Головна</li>
+        <li>🔥 В тренді</li>
+        <li>📺 Підписки</li>
+        <li>📚 Бібліотека</li>
+      </ul>
+    </nav>
