--- a/lab3/index.html
+++ b/lab3/index.html
@@ -24,3 +24,15 @@
         <li>📚 Бібліотека</li>
       </ul>
     </nav>
+       <section class="videos">
+      <div class="video">🎥 Відео 1</div>
+      <div class="video">🎥 Відео 2</div>
+      <div class="video">🎥 Відео 3</div>
+      <div class="video">🎥 Відео 4</div>
+      <div class="video">🎥 Відео 5</div>
+      <div class="video">🎥 Відео 6</div>
+    </section>
+  </main>
+
+</body>
+</html>
