--- a/lab3/index.html
+++ b/lab3/index.html
@@ -24,14 +24,21 @@
         <li>📚 Бібліотека</li>
       </ul>
     </nav>
-       <section class="videos">
-      <div class="video">🎥 Відео 1</div>
-      <div class="video">🎥 Відео 2</div>
-      <div class="video">🎥 Відео 3</div>
-      <div class="video">🎥 Відео 4</div>
-      <div class="video">🎥 Відео 5</div>
-      <div class="video">🎥 Відео 6</div>
-    </section>
+  <section class="videos">
+  <div class="video">
+    <img src="https://via.placeholder.com/320x150.png?text=Відео+1" alt="Відео 1">
+    <p>Назва відео 1</p>
+  </div>
+  <div class="video">
+    <img src="https://via.placeholder.com/320x150.png?text=Відео+2" alt="Відео 2">
+    <p>Назва відео 2</p>
+  </div>
+  <div class="video">
+    <img src="https://via.placeholder.com/320x150.png?text=Відео+3" alt="Відео 3">
+    <p>Назва відео 3</p>
+  </div>
+</section>
+        
   </main>
 
 </body>
