замінив силку на сайті свому

--- a/labs.html
+++ b/labs.html
@@ -14,7 +14,7 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Головна</a></li>
+            <li><a href="index.html">Головнаааааааа</a></li>
             <li><a href="about.html">Про мене</a></li>
             <li><a href="practices.html">Практичні роботи</a></li>
             <li><a href="labs.html">Лабораторні заняття</a></li>
@@ -24,8 +24,8 @@
     <section>
         <h2>Список лабораторних</h2>
         <ul>
-            <li>Лабораторна №1 – <em>буде додано пізніше</em></li>
-            <li>Лабораторна №2 – <em>буде додано пізніше</em></li>
+            <li>Лабораторна та практична  №1 – <em>Створив свій сайт</em></li>
+            <li>Лабораторна та практична №3 – <em>https://classroom.google.com/c/NzgwMjk0NzgwNjA1/a/ODE0OTE3MTEyMDk1/details</em></li>
         </ul>
     </section>
 
