--- a/labs.html
+++ b/labs.html
@@ -14,7 +14,7 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Головнаааааааа</a></li>
+            <li><a href="index.html">Головна</a></li>
             <li><a href="about.html">Про мене</a></li>
             <li><a href="practices.html">Практичні роботи</a></li>
             <li><a href="labs.html">Лабораторні заняття</a></li>
@@ -25,7 +25,7 @@
         <h2>Список лабораторних</h2>
         <ul>
             <li>Лабораторна та практична  №1 – <em>Створив свій сайт</em></li>
-            <li>Лабораторна та практична №3 – <em>https://classroom.google.com/c/NzgwMjk0NzgwNjA1/a/ODE0OTE3MTEyMDk1/details</em></li>
+            <li>Лабораторна та практична №3 – <em><a href="https://classroom.google.com/c/NzgwMjk0NzgwNjA1/a/ODA4NTg0MTI3MjQ0/details" target="_blank">Лабораторна</a></em></li>
         </ul>
     </section>
 
