--- a/labs.html
+++ b/labs.html
@@ -85,6 +85,7 @@
         <ul>
             <li>Лабораторна та практична №1 – <em>Створив свій сайт і додав форму</em></li>
             <li>Лабораторна та практична №3 – <em><a href="https://classroom.google.com/c/NzgwMjk0NzgwNjA1/a/ODA4NTg0MTI3MjQ0/details" target="_blank">Лабораторна</a></em></li>
+            <li> практична №3 – <em><a href="https://classroom.google.com/c/NzgwMjk0NzgwNjA1/a/ODE3OTA3MTM4NTA2/details" target="_blank">практична</a></em></li>
         </ul>
     </section>
 
@@ -127,7 +128,7 @@
     <section>
         <h2>Практична робота №4 – Віртуальна клавіатура</h2>
         <iframe class="keyboard-frame" 
-                src="https://st9113777-wq.github.io/my-website442/" 
+                src="https://st9113777-wq.github.io/my-website442/lab4/index.htm"     
                 width="100%" height="400px">
         </iframe>
     </section>
