--- a/labs.html
+++ b/labs.html
@@ -128,7 +128,7 @@
     <section>
         <h2>Практична робота №4 – Віртуальна клавіатура</h2>
         <iframe class="keyboard-frame" 
-                src="https://st9113777-wq.github.io/my-website442/lab4/index.htm"     
+                src="https://st9113777-wq.github.io/my-website442/lab4/index.html"     
                 width="100%" height="400px">
         </iframe>
     </section>
