--- a/labs.html
+++ b/labs.html
@@ -136,7 +136,7 @@
     <section>
         <h2>Лабораторна робота №4 – Планер</h2>
         <iframe class="keyboard-frame" 
-                src="https://st9113777-wq.github.io/my-website442/lab4/lab4h.html"     
+                src="https://st9113777-wq.github.io/my-website442/lab4h/"     
                 width="100%" height="500px">
         </iframe>
     </section>
