Повністю оновлено сайт: головна, про мене, лабораторні, практичні, ЛР5

--- a/lab5/lab5/index.html
+++ b/lab5/lab5/index.html
@@ -27,62 +27,8 @@
         <a href="#" class="btn-red">Download Resume</a>
     </div>
 
-    <img src="https://i.postimg.cc/XYh2QKqF/your-photo.png" class="hero-photo">
+    <img src="https://i.pinimg.com/736x/89/61/1b/89611bb5e3e62fb30753447b15e19ce2.jpg" class="hero-photo">
 </section>
-
-<section class="labs-section">
-    <div class="section-header">
-        <h2>Лабораторні роботи</h2>
-        <a href="labs.html" class="view-all">Переглянути всі</a>
-    </div>
-
-    <div class="labs-grid">
-        <div class="lab-card">
-            <h3>Лабораторна №2</h3>
-            <p>Основи HTML та структура документа.</p>
-            <span>Вересень 2024</span>
-        </div>
-
-        <div class="lab-card">
-            <h3>Лабораторна №3</h3>
-            <p>Використання CSS для стилізації сторінок.</p>
-            <span>Жовтень 2024</span>
-        </div>
-
-        <div class="lab-card">
-            <h3>Лабораторна №5</h3>
-            <p>Portfolio UI — сторінка за Figma.</p>
-            <span>Листопад 2025</span>
-        </div>
-    </div>
-</section>
-
-<section class="pr-section">
-    <h2>Практичні роботи</h2>
-
-    <div class="practice-card">
-        <img src="https://i.postimg.cc/XYh2QKqF/practice1.png">
-        <div>
-            <h3>Практична №1</h3>
-            <span class="tag html">HTML</span>
-            <p>Основи створення вебсторінки.</p>
-        </div>
-    </div>
-
-    <div class="practice-card">
-        <img src="https://i.postimg.cc/XYh2QKqF/practice4.png">
-        <div>
-            <h3>Практична №4</h3>
-            <span class="tag css">CSS</span>
-            <p>Розміщення контенту та робота з каскадними стилями.</p>
-        </div>
-    </div>
-
-</section>
-
-<footer>
-    © 2025 Олег Філоненко
-</footer>
 
 </body>
 </html>
