--- a/lab5/lab5/practices.html
+++ b/lab5/lab5/practices.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Практичні роботи – Олег Філоненко</title>
+    <title>Практичні – Олег Філоненко</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -21,10 +21,10 @@
 </header>
 
 <section class="pr-section">
-    <h1>Практичні роботи</h1>
+    <h2>Практичні роботи</h2>
 
     <div class="practice-card">
-        <img src="https://i.postimg.cc/XYh2QKqF/practice1.png">
+        <img src="https://i.pinimg.com/736x/89/61/1b/89611bb5e3e62fb30753447b15e19ce2.jpg">
         <div>
             <h3>Практична №1</h3>
             <span class="tag html">HTML</span>
@@ -33,18 +33,15 @@
     </div>
 
     <div class="practice-card">
-        <img src="https://i.postimg.cc/XYh2QKqF/practice4.png">
+        <img src="https://i.pinimg.com/736x/89/61/1b/89611bb5e3e62fb30753447b15e19ce2.jpg">
         <div>
             <h3>Практична №4</h3>
             <span class="tag css">CSS</span>
-            <p>Розміщення контенту та робота з каскадними стилями.</p>
+            <p>Стилізація та макетування.</p>
         </div>
     </div>
-</section>
 
-<footer>
-    © 2025 Олег Філоненко
-</footer>
+</section>
 
 </body>
 </html>
