Повністю оновлено сайт: головна, про мене, лабораторні, практичні, ЛР5

--- a/lab5/lab5/about.html
+++ b/lab5/lab5/about.html
@@ -22,7 +22,7 @@
 
 <section class="about">
     <h1>Про мене</h1>
-    <p>Мене звати Олег, я студент групи ТЛР–21...</p>
+    <p>Мене звати Олег, я студент групи ТЦР–21...</p>
 
     <img src="https://i.pinimg.com/736x/89/61/1b/89611bb5e3e62fb30753447b15e19ce2.jpg" class="about-photo">
 </section>
