Повністю оновлено сайт: головна, про мене, лабораторні, практичні, ЛР5

--- a/lab5/lab5/index.html
+++ b/lab5/lab5/index.html
@@ -23,7 +23,7 @@
 <section class="hero">
     <div class="hero-text">
         <h1>Hi, I am Oleg, Creative Technologist</h1>
-        <p>Студент групи ТЛР–21. На цьому сайті зібрані всі лабораторні та практичні роботи з дисципліни “Веб-технології та веб-дизайн”.</p>
+        <p>Студент групи ТЦР–21. На цьому сайті зібрані всі лабораторні та практичні роботи з дисципліни “Веб-технології та веб-дизайн”.</p>
         <a href="#" class="btn-red">Download Resume</a>
     </div>
 
