Додано ЛР5 до списку лабораторних, оновлено labs.html

--- a/labs.html
+++ b/labs.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Лабораторні заняття – Олег Філоненко</title>
     <link rel="stylesheet" href="css/style.css">
+
     <style>
-        /* Стилізація форми */
         form {
             background: white;
             padding: 25px;
@@ -57,13 +57,13 @@
             background: #74b9ff;
         }
 
-        /* Стилізація iframe клавіатури */
         .keyboard-frame {
             border: 1px solid #b2bec3;
             border-radius: 10px;
             margin-top: 15px;
         }
     </style>
+
 </head>
 <body>
 
@@ -80,16 +80,30 @@
         </ul>
     </nav>
 
+    <!-- 🔥 Список лабораторних -->
     <section>
         <h2>Список лабораторних</h2>
         <ul>
             <li>Лабораторна та практична №1 – <em>Створив свій сайт і додав форму</em></li>
-            <li>Лабораторна та практична №3 – <em><a href="https://classroom.google.com/c/NzgwMjk0NzgwNjA1/a/ODA4NTg0MTI3MjQ0/details" target="_blank">Лабораторна</a></em></li>
-            <li> Практична №4 – <em><a href="https://classroom.google.com/c/NzgwMjk0NzgwNjA1/a/ODE3OTA3MTM4NTA2/details" target="_blank">практична</a></em></li>
+
+            <li>Лабораторна та практична №3 – 
+                <em><a href="https://classroom.google.com/c/NzgwMjk0NzgwNjA1/a/ODA4NTg0MTI3MjQ0/details" target="_blank">Лабораторна</a></em>
+            </li>
+
+            <li>Практична №4 – 
+                <em><a href="https://classroom.google.com/c/NzgwMjk0NzgwNjA1/a/ODE3OTA3MTM4NTA2/details" target="_blank">Практична</a></em>
+            </li>
+
+            
+            <li>Лабораторна робота №5 – 
+                <em><a href="https://classroom.google.com/c/NzgwMjk0NzgwNjA1/a/ODE3MDc2NTI5OTEx/details" target="_blank">
+                    Portfolio UI (за макетом Figma)
+                </a></em>
+            </li>
         </ul>
     </section>
 
-    <!-- Форма реєстрації -->
+   
     <section>
         <form action="https://formspree.io/f/xvgzjqzy" method="post">
             <h3>Форма реєстрації користувача</h3>
@@ -124,7 +138,7 @@
         </form>
     </section>
 
-    <!-- Клавіатура -->
+    
     <section>
         <h2>Практична робота №4 – Віртуальна клавіатура</h2>
         <iframe class="keyboard-frame" 
@@ -132,7 +146,8 @@
                 width="100%" height="400px">
         </iframe>
     </section>
-    <!-- Планер -->
+
+   
     <section>
         <h2>Лабораторна робота №4 – Планер</h2>
         <iframe class="keyboard-frame" 
