Додана ЛР6 — анімація Pokémon

--- a/lab6/index.html
+++ b/lab6/index.html
@@ -3,20 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ЛР6 — Анімація Покемона</title>
+    <title>Лабораторна 6 – Анімація Покемона</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1 class="title">Лабораторна робота №6</h1>
-<h2 class="subtitle">Анімація зі спрайт-шитом Pokémon (PokémonDB)</h2>
-
 <div class="scene">
-
     <div class="clouds"></div>
-
-    <div class="pokemon"></div>
-
+    <div class="pikachu"></div>
     <div class="ground"></div>
 </div>
 
