Додав лабораторну №6 у список робіт

--- a/labs.html
+++ b/labs.html
@@ -87,23 +87,30 @@
             <li>Лабораторна та практична №1 – <em>Створив свій сайт і додав форму</em></li>
 
             <li>Лабораторна та практична №3 – 
-                <em><a href="https://classroom.google.com/c/NzgwMjk0NzgwNjA1/a/ODA4NTg0MTI3MjQ0/details" target="_blank">Лабораторна</a></em>
+                <em><a href="https://classroom.google.com/c/NzgwMjk0NzgwNjА1/a/ODA4NTg0MTI3MjQ0/details" target="_blank">Лабораторна</a></em>
             </li>
 
             <li>Практична №4 – 
-                <em><a href="https://classroom.google.com/c/NzgwMjk0NzgwNjA1/a/ODE3OTA3MTM4NTA2/details" target="_blank">Практична</a></em>
+                <em><a href="https://classroom.google.com/c/NzgwMjk0NzgwNjА1/a/ODE3OTA3MTM4NТА2/details" target="_blank">Практична</a></em>
             </li>
 
-            
             <li>Лабораторна робота №5 – 
-                <em><a href="https://classroom.google.com/c/NzgwMjk0NzgwNjA1/a/ODE3MDc2NTI5OTEx/details" target="_blank">
+                <em><a href="https://classroom.google.com/c/NzgwMjk0NzgwNjА1/a/ODE3MDc2NTI5OTEx/details" target="_blank">
                     Portfolio UI (за макетом Figma)
                 </a></em>
+            </li>
+
+            <li>Лабораторна робота №6 –
+                <em>
+                    <a href="lab6/index.html" target="_blank">Анімація Pokémon (CSS)</a>
+                </em>
+                — <a href="https://classroom.google.com/c/NzgwMjk0NzgwNjA1/a/ODIzNzQ4MDMyMTU5/details" 
+                     target="_blank">Завдання Classroom</a>
             </li>
         </ul>
     </section>
 
-   
+    <!-- Форма реєстрації -->
     <section>
         <form action="https://formspree.io/f/xvgzjqzy" method="post">
             <h3>Форма реєстрації користувача</h3>
@@ -138,7 +145,7 @@
         </form>
     </section>
 
-    
+    <!-- Клавіатура -->
     <section>
         <h2>Практична робота №4 – Віртуальна клавіатура</h2>
         <iframe class="keyboard-frame" 
@@ -147,7 +154,7 @@
         </iframe>
     </section>
 
-   
+    <!-- Планер -->
     <section>
         <h2>Лабораторна робота №4 – Планер</h2>
         <iframe class="keyboard-frame" 
