Add lab7 link to labs page

--- a/labs.html
+++ b/labs.html
@@ -107,6 +107,14 @@
                 — <a href="https://classroom.google.com/c/NzgwMjk0NzgwNjA1/a/ODIzNzQ4MDMyMTU5/details" 
                      target="_blank">Завдання Classroom</a>
             </li>
+            <li>Лабораторна робота №7 – 
+    <em>
+        <a href="https://st9113777-wq.github.io/my-website442/lab7-newyear/" target="_blank">
+            Новорічна листівка (SCSS + BEM)
+        </a>
+    </em>
+</li>
+
         </ul>
     </section>
 
